--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Point And Click</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    hello world
+
+    <script src="js/index.js"></script>
 </body>
+
 </html>
