--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body id="main">
-    hello world
+<body>
+    
     <h1 id="mainTitle"></h1>
+    <div id="gameWindow">
+        
+    </div>
     <script src="js/index.js"></script>
 </body>
 
