--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
     
     <h1 id="mainTitle"></h1>
     <div id="gameWindow">
-        
+        <!-- Foreground -->
+
+        <!-- Character -->
+        <div id="MainCharacter" class="character">
+            <img src="img/rpgcharacter.png" alt="character">
+        </div>
+        <!-- Background -->
+        <div id="tilemap" class="background">
+            <img src="img/level design.jpg" alt="tilemap 1">
+        </div>
     </div>
     <script src="js/index.js"></script>
 </body>
