--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <!-- Character -->
         <div id="MainCharacter" class="character">
-            <img src="img/rpgcharacter.png" alt="character">
+            <img src="img/char.png" alt="character">
         </div>
         <!-- Background -->
         <div id="tilemap" class="background">
