--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div id="platform" class="foreground">
             <img src="img/platform.png" alt="platform with rune">
         </div>
-        <div id="tree1" class="foreground">
-            <img id="tree" src="" alt="It's a tree">
+        <div id="house" class="foreground">
+            <img id="tree" src="" alt="">
         </div>
         <div id="signToLeft" class="foreground"></div>
         <div id="door1" class="foreground"></div>
