--- a/tweededeel.html
+++ b/tweededeel.html
@@ -36,7 +36,7 @@
         </div>
 
         <!-- Character -->
-        <div itemid="mainCharacter2" id="mainCharacter" class="character">
+        <div id="mainCharacter2" class="character">
             <img src="img/char.png" alt="main character">
         </div>
 
@@ -68,6 +68,6 @@
             <source src="" type="audio/ogg">
             <source src="" type="audio/mpeg">
         </audio>
-        <script src="js/index.js"></script>
+        <script src="js/index2.js"></script>
 </body>
 </html>
