--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <div id="oldhouse" class="foreground"></div>
         <img src="img/tree.png" id="wisetree" class="foreground" alt="sprookjesboom">
         <div id="pond" class="foreground"></div>
+        <div id="spawn" class="foreground"></div>
 
         <!-- Character -->
         <div id="mainCharacter" class="character">
